res/examples/valid/let_decl_assign_from_block_returning_expr_prefix_bang.eg
let b: bool = false;
let a: bool = { !b };