res/examples/invalid/let_decl_type_mismatch_assign_from_block_returning_expr_prefix_bang.eg
let b: bool = false;
let a: number = { !b };

// out: TypeError: mismatched types: expected type `number` but received `bool`